# Agin

./: .gitignore  404.html  README.md  agin_requirements.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml
agin/: __init__.py
agin/classification/: __init__.py  linear_svm.py  naive_bayes.py  nonlinear_svm.py
agin/neural_network/: neural_network.py
agin/regression/: X_test.csv  X_train.csv  Y_test.csv  Y_train.csv  __init__.py  elastic_net_regression.py  knn_regressor.py  lasso_regression.py  linear_regression.py  logistic_regression.py  multilinear_regression.py  polynomial_regression.py  ridge_regression.py
agin/utils/: __init__.py
classification/: index.html
docs/: classification.md  index.md  neural.md  regression.md  utils.md
neural/: index.html
regression/: index.html
search/: search_index.json
utils/: index.html
